force-app/main/default/objects/Test_Result__c/Test_Result__c.object-meta.xml
<CustomObject>
    <label>Test Result</label>
    <nameField>
        <displayFormat>TestResult-{0000}</displayFormat>
        <label>Test Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>