force-app/main/default/objects/Test_Result__c/fields/Any_Comments_Recommedations__c.field-meta.xml
<CustomField>
    <fullName>Any_Comments_Recommedations__c</fullName>
    <label>Any Comments/Recommedations?</label>
    <type>TextArea</type>
</CustomField>