force-app/main/default/objects/Test_Result__c/fields/Defect_s_Logged__c.field-meta.xml
<CustomField>
    <fullName>Defect_s_Logged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Administrator Use Only: Have defect(s) been logged for all failed steps?</inlineHelpText>
    <label>Defect(s) Logged?</label>
    <type>Checkbox</type>
</CustomField>