force-app/main/default/objects/Test_Result__c/fields/Failed_Status__c.field-meta.xml
<CustomField>
    <fullName>Failed_Status__c</fullName>
    <label>Failed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defect Logged</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>