force-app/main/default/objects/Test_Result__c/fields/If_FAIL_what_happened__c.field-meta.xml
<CustomField>
    <fullName>If_FAIL_what_happened__c</fullName>
    <label>If Failed, what happened?</label>
    <type>TextArea</type>
</CustomField>