force-app/main/default/objects/Test_Result__c/fields/If_FAIL_which_step_s__c.field-meta.xml
<CustomField>
    <fullName>If_FAIL_which_step_s__c</fullName>
    <inlineHelpText>In which steps did the actual outcome differ from the  expected outcome?</inlineHelpText>
    <label>If Failed, which step(s)?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>