force-app/main/default/objects/Test_Result__c/fields/Moderator_Comments__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Comments__c</fullName>
    <label>Moderator Comments</label>
    <type>TextArea</type>
</CustomField>