force-app/main/default/objects/Test_Result__c/fields/NS_Release__c.field-meta.xml
<CustomField>
    <fullName>NS_Release__c</fullName>
    <formula>Test_Case__r.Release__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Phase</label>
    <type>Text</type>
</CustomField>