force-app/main/default/objects/Test_Result__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Project Phase (e.g. Phase 1, Phase 2, etc.) that the Test Result is being logged in.</description>
    <inlineHelpText>Which Phase of the Project is this? (ie.g. Phase 1)</inlineHelpText>
    <label>Project Phase</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Test Results</relationshipLabel>
    <relationshipName>Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>