force-app/main/default/objects/Test_Result__c/fields/Test_Result_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Result_Name__c</fullName>
    <formula>Test_Case__r.Test_Scenario__c + &quot; - &quot; + TEXT(User__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Result Name</label>
    <type>Text</type>
</CustomField>