force-app/main/default/objects/Test_Result__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the Tester logging this Test Result?</inlineHelpText>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>