force-app/main/default/objects/Test_Result__c/fields/Testing_Phase__c.field-meta.xml
<CustomField>
    <fullName>Testing_Phase__c</fullName>
    <label>Testing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>End-to-End</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>