force-app/main/default/objects/Test_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Test_Result_Name__c</columns>
    <columns>Test_Case__c</columns>
    <columns>Testing_Phase__c</columns>
    <columns>NS_Release__c</columns>
    <columns>Release__c</columns>
    <columns>Environment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>